<resources>
    <string name="app_name">Tap Art</string>
    <string name="title_activity_bottom_nav_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_first_activity">Take Photo of Complete CANVAS, then each parts of the photo so that high resolution picture can be made</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_basic_main">Take Four Pictures</string>
    <string name="take_photo">Take Photo</string>
    <string name="first_row_first_column">First Column</string>
    <string name="camera_preview_testing">Camera Preview Testing</string>
    <string name="title_activity_result_view">ResultViewActivity</string>
    <string name="take4">Take 2x2 Pictures</string>
    <string name="take6">take 3x2 Pictures</string>
    <string name="take9">Take 3x3 Pictures</string>
    <string name="instractions_to_select_images_no">Select how many images you want to take</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="test_button">Test Button</string>
    <string name="textview">TextView</string>
    <string name="string_textview">Test Text</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="take_reference_picture">Take Reference Picture</string>
    <string name="capture_9_images_and_stitch">Capture 9 images to Stitch</string>
    <string name="capture_6_images_and_stitch">Capture 6 Images to Stitch</string>
    <string name="capture_4_images_and_stitch">Capture 4 Images to Stitch</string>
</resources>