<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#77FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"

        android:text="@string/hello_first_activity"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />
    <Button
        android:id="@+id/button_take4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take4"
        app:layout_constraintBottom_toTopOf="@id/button_take6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/button_take6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take6"
        app:layout_constraintBottom_toTopOf="@id/button_take9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_take4"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/button_take9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_take6"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>