<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraPreviewActivity">


    <ImageView
        android:id="@+id/show_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button_take4_1_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

<!--        <SurfaceView-->
<!--            android:visibility="gone"-->
<!--            android:id="@+id/surfaceView1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

        <SurfaceView
            android:id="@+id/surfaceView1_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <SurfaceView
            android:id="@+id/surfaceView1_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <SurfaceView
            android:id="@+id/surfaceViewOnTop2_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:visibility="gone"
            android:id="@+id/imageView_take4_1_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/first_row_first_column"
            android:src="@drawable/icon_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:visibility="gone"
            android:id="@+id/button_take4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <Button
            android:id="@+id/button_take4_2_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

            <SurfaceView
                android:id="@+id/surfaceView2_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        <SurfaceView
            android:id="@+id/surfaceViewOnTop2_c2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/imageView_take4_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/first_row_first_column"
            android:src="@drawable/icon_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button_take4_3_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <SurfaceView
            android:id="@+id/surfaceView3_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <SurfaceView
            android:id="@+id/surfaceViewOnTop2_c3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/imageView_take4_3_c"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/first_row_first_column"
            android:src="@drawable/icon_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/save1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/capture1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_take4_4_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <SurfaceView
            android:id="@+id/surfaceView4_c"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SurfaceView
            android:id="@+id/surfaceViewOnTop2_c4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_take4_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/first_row_first_column"
            android:src="@drawable/icon_main"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/button"
            app:layout_constraintBottom_toTopOf="@+id/button_take4_4_c"
            app:layout_constraintStart_toStartOf="@+id/surfaceView4_c" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <!--    <SurfaceView-->
<!--        android:id="@+id/surfaceView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp" />-->

<!--    <SurfaceView-->
<!--        android:id="@+id/surfaceViewOnTop2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->



    <Button
        android:id="@+id/save3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:padding="10dp"
        android:text="Save"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:visibility="gone"
        android:id="@+id/save_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:padding="10dp"
        android:text="Save"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save3"
        />



</androidx.constraintlayout.widget.ConstraintLayout>